# OpenGLTest

./: CMakeLists.txt  imgui.ini
objects/: BaseObject.cpp  BaseObject.h  CircleObject.cpp  CircleObject.h  ObjectHandler.cpp  ObjectHandler.h  RectangleObject.cpp  RectangleObject.h
res/: basic.shader  basic_color.shader  freetype_shader.shader
src/: Application.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.h  Utility.cpp  Utility.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp  test.h
src/CollisionDetection/: CollisionDetection.cpp  CollisionDetection.h  SATCollisionDetection.cpp  SATCollisionDetection.h
src/Communication/: UDPClass.cpp  UDPClass.h
src/Input/: InputEventHandler.cpp  InputEventHandler.h  MouseEventHandler.cpp  MouseEventHandler.h  MouseManipulator.cpp  MouseManipulator.h
src/Menu/: ImGuiMenu.cpp  ImGuiMenu.h  ImGuiMenuElement.h  ImGuiSubMenu.cpp  ImGuiSubMenu.h
src/Misc/: Constants.h  EBMath.cpp  EBMath.h
src/OpenGL/: GLAbstractionInterface.cpp  GLAbstractionInterface.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Physics/: CollisionDetection.cpp  CollisionDetection.h  NewtonianPhysics.cpp  NewtonianPhysics.h
src/TextRendering/: TextFreetype.cpp  TextFreetype.h
test/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestFreetype.cpp  TestFreetype.h  TestLines.cpp  TestLines.h  TestObjectGeneration.cpp  TestObjectGeneration.h  TestRectangle2D.cpp  TestRectangle2D.h  TestSnake.cpp  TestSnake.h  TestTexture2D.cpp  TestTexture2D.h
